Name:             catamad
Version:          0.3
Cabal-Version:    >= 1.2
License:          GPL-3
License-File:     LICENSE
Author:           Brendan Hickey
Copyright:        (c) 2011 Brendan Hickey
Maintainer:       brendan@bhickey.net
Stability:        Experimental
Category:         Game
Synopsis:         The Catacombs of Madness
Build-Type:       Simple

Executable catamad
  Build-Depends:  base,
                  containers >= 0.4.0.0,
                  hscurses >= 1.4.1.0,
                  pqueue >= 1.2.1,
                  random >= 1.0.0.3,
                  setlocale >= 0.0.3,
                  vector >= 0.7.1
  Main-Is:        Main.hs
  GHC-Options:    -Wall 
                  -Werror
                  -O3
  Hs-Source-Dirs: src
